Fix styles and overflow

--- a/src/stylesheets/layout/_backgroundAnimations.scss
+++ b/src/stylesheets/layout/_backgroundAnimations.scss
@@ -28,7 +28,7 @@
   height: 250px;
   border: 9px solid $colorLightPink;
   box-shadow: 0px 0px 60px 20px $colorPink;
-  top: 40%;
+  top: 39%;
   animation: neonSquare 10s infinite;
 }
 @keyframes neonSquare {
@@ -49,7 +49,7 @@
   }
 }
 
-.NeonCircle {
+.NeonBigSquare {
   position: absolute;
   width: 250px;
   height: 250px;
@@ -58,6 +58,7 @@
   top: 40%;
   transform: rotate(45deg);
   animation: neonSquare2 10s infinite;
+  overflow: hidden;
 }
 @keyframes neonSquare2 {
   0% {
@@ -71,7 +72,7 @@
     box-shadow: 0px 0px 60px 20px $colorPink;
   }
   100% {
-    transform: rotate(225deg) scale(3);
+    transform: rotate(225deg) scale(2.5);
     border: 9px solid $colorDirtyWhite;
     box-shadow: 0px 0px 60px 20px $colorBlueGray;
   }
