--- a/src/stylesheets/layout/_presentation.scss
+++ b/src/stylesheets/layout/_presentation.scss
@@ -6,13 +6,18 @@
   justify-content: center;
   align-items: center;
   background: linear-gradient($colorNoBlack, $colorPink);
-
+  //background: linear-gradient(#cd295a, #38adae);
+  contain: strict;
+  //transform: translateZ(0);
+  //@debug: hidden;
   &__portrait {
     transform: scale(0.5);
   }
 }
 
 .text-animation .text {
+  position: relative;
+  z-index: 2;
   font-family: $fontMono;
   font-weight: normal;
   font-size: 0.9rem;
